Updated the descriptions with little help from chatgpt and github copilot

--- a/index.html
+++ b/index.html
@@ -106,20 +106,37 @@
           <div class="row">
             <div class="col-md-6 features-leftcol wp2">
               <h1>Where are the pianos from?</h1>
-              <p class="margin-bottom">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="margin-bottom">
+                Our process begins with taking in pianos that people no longer want or need, mostly on Facebook Marketplace and on Kijiji.
+                We also accept donations from individuals and businesses.
+
+              </p>
               <h1>What process to restore them?</h1>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>
+                We look for pianos that are in acceptable condition, with no broken keys, missing parts, or significant cosmetic damage.
+                We then clean, refurbish and tune the pianos, and replace any broken parts.
+                Finally, we may paint the pianos with a high-quality, non-toxic paint, and add a personalized plaque with the school's name if wished.
+                We believe that with a little love and care, these pianos can be restored to their former glory and provide countless hours of enjoyment to students.
+              </p>
             </div>
             <div class="col-md-6 features-rightcol wp3">
               <h1>Who's eligible for these pianos?</h1>
-              <p class="margin-bottom">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <h1>Can I donate my piano?</h1>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="margin-bottom">
+                We are donating these pianos to schools, community centres, libraries, public buildings and/or non-for-profit organizations. To find out if your entity is eligible, please contact us at piano4schools.com[at]gmail.com
+              </p>
+              <h1>Can I help?</h1>
+              <p>
+                Absolutely! We are always looking for volunteers to help with the restoration process, the moving, and to help us spread the word about our mission.
+                If you are interested in helping out, please contact us via our <a href="mailto:piano4schools.com@gmail.com" target="_blank">email</a>.
+              </p>
+              <p>
+                You can also help by donating to our cause. We are a registered charity, and all donations are tax-deductible.
+              </p>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 text-center">
-              <a href="#" class="contact-btn">Contact Us Today</a>
+              <a href="mailto:piano4schools.com@gmail.com" target="_blank" class="contact-btn">Contact Us</a>
             </div>
           </div>
         </div>
@@ -201,8 +218,7 @@
               </h3>
               <p>
                 Piano4Schools is founded in 2023 by Maxim Mai and family who are passionate about music education.
-                We believe that every child should have the opportunity to learn to play the piano.
-                We are committed to providing quality pianos to schools and community organizations for free.
+                We believe that every child should have the opportunity to learn to play the piano, and every abandoned piano deserves a second chance.
               </p>
             </div>
             <div class="col-md-3">
@@ -213,7 +229,7 @@
                 <strong>Email</strong>: piano4schools.com@gmail.com
               </p>
               <p>
-                <strong>By mail</strong>: Richmond Hill, Ontario, Canada
+                <strong>Area Serving:</strong>: We are located in the GTA area, and we are currently serving the Greater Toronto Area.
               </p>
             </div>
             <div class="col-md-2 col-md-offset-3">
