removed the video

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 By providing schools with pianos, we aim to inspire a lifelong love of music, foster creativity and self-expression, and empower students to achieve their full potential.</p>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-2 col-md-offset-5 text-center">
-              <a href="http://player.vimeo.com/video/87701971?title=0&amp;byline=0&amp;portrait=0&amp;color=1883ad&amp;autoplay=1" class="hero-play-btn various fancybox.iframe">Play Button</a>
-            </div>
-          </div>
+<!--          <div class="row">-->
+<!--            <div class="col-md-2 col-md-offset-5 text-center">-->
+<!--              <a href="http://player.vimeo.com/video/87701971?title=0&amp;byline=0&amp;portrait=0&amp;color=1883ad&amp;autoplay=1" class="hero-play-btn various fancybox.iframe">Play Button</a>-->
+<!--            </div>-->
+<!--          </div>-->
           <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center">
               <a href="#mission" class="get-started-btn">Mission Statement</a>
