--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Starnight - A Sexy As Hell Free HTML5/CSS3 Template</title>
+    <title>Piano 4 Schools - On a mission to place a piano in every school</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -52,10 +52,11 @@
                 We believe that music education is a fundamental part of a well-rounded education, and that every student should have the opportunity to learn and play an instrument.
                 By providing schools with pianos, we aim to inspire a lifelong love of music, foster creativity and self-expression, and empower students to achieve their full potential.</p>
             </div>
+            <br/>
           </div>
 <!--          <div class="row">-->
 <!--            <div class="col-md-2 col-md-offset-5 text-center">-->
-<!--              <a href="http://player.vimeo.com/video/87701971?title=0&amp;byline=0&amp;portrait=0&amp;color=1883ad&amp;autoplay=1" class="hero-play-btn various fancybox.iframe">Play Button</a>-->
+<!--              <a href="#" class="hero-play-btn various fancybox.iframe">Play Button</a>-->
 <!--            </div>-->
 <!--          </div>-->
           <div class="row">
@@ -72,7 +73,7 @@
               <h1>
               Our Mission
               </h1>
-              <p>Our mission is to provide access to high-quality piano instruments and music education resources to public schools, with the aim of fostering a love and appreciation of music in students of all backgrounds. We believe that music education is a vital component of a well-rounded education, and we strive to eliminate financial barriers that may prevent schools from providing this opportunity to their students. </p>
+              <p>Our mission is to provide access to piano instruments and music education resources to public schools, with the aim of restoring pianos that no longer needed by people. We believe that music education is a vital component of a well-rounded education, and we strive to eliminate financial barriers that may prevent schools from providing this opportunity to their students. </p>
               <p>By providing free pianos and support to public schools, we hope to empower the next generation of musicians and inspire a lifelong love of music.</p>
               <a href="#mission" class="download-btn">View in PDF</a>
             </div>
