Replaced some quotes

--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@
               <div id="firstSlider">
                 <ul class="slides">
                   <li>
-                    <div class="avatar"><img src="img/ehssan.png" width="120px" height="120px" alt="Ehssan"></div>
-                    <h1>Life is like a piano; the white keys represent happiness and the black show sadness.
-                      But as you go through life’s journey, remember that the black keys also create music <small>- Ehssan</small></h1>
+                    <div class="avatar"><img src="img/Frederic%20Chopin.png" width="120px" height="120px" alt="Frederic Chopin"></div>
+                    <h1>I tell my piano the things I used to tell you.  <small>- Frederic Chopin</small></h1>
 
                   </li>
                   <li>
-                    <div class="avatar"><img src="img/ProfilePictureMaker (1).png" width="120px" height="120px"  alt="Ludwig van Beethoven"></div>
+                    <div class="avatar"><img src="img/Ludwig%20van%20Beethoven.png" width="120px" height="120px" alt="Ludwig van Beethoven"></div>
                     <h1>Music can change the world. <small>- Ludwig van Beethoven</small></h1>
                   </li>
                 </ul>
