Replaced some quotes

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <h1>What process to restore them?</h1>
               <p>
                 We look for pianos that are in acceptable condition, with no broken keys, missing parts, or significant cosmetic damage.
-                We then clean, refurbish and tune the pianos, and replace any broken parts.
+                We then clean, refurbish, and replace any broken parts, deliver to schools, tune them and provide ongoing support.
                 Finally, we may paint the pianos with a high-quality, non-toxic paint, and add a personalized plaque with the school's name if wished.
                 We believe that with a little love and care, these pianos can be restored to their former glory and provide countless hours of enjoyment to students.
               </p>
