--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 About Us
               </h3>
               <p>
-                Piano4Schools is founded in 2023 by Maxim Mai and family who are passionate about music education.
+                Piano4Schools is founded in 2023 by <a href="https://www.linkedin.com/in/maximmai/" target="_blank">Maxim Mai</a and family who are passionate about music education.
                 We believe that every child should have the opportunity to learn to play the piano, and every abandoned piano deserves a second chance.
               </p>
             </div>
