--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
           <div class="row">
             <div class="col-md-8 col-md-offset-2 text-center">
               <h1 class="animated bounceInDown">Piano for Schools</h1>
+              <img src="img/piano4schools_logo_transparent.png" width="320">
               <p class="animated fadeInUpDelay">Our mission is to enrich the lives of students by providing free access to high-quality pianos in public schools.
                 We believe that music education is a fundamental part of a well-rounded education, and that every student should have the opportunity to learn and play an instrument.
                 By providing schools with pianos, we aim to inspire a lifelong love of music, foster creativity and self-expression, and empower students to achieve their full potential.</p>
